<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:text="ParkHere Search"
        android:textSize="30dp"
        android:id="@+id/actionFirstWelcome"
        android:textStyle="normal|bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/actionFirstWelcome"
        android:text="Follow the steps below to find your perfect parking spot."
        android:id="@+id/actionWelcome"
        android:textStyle="normal|italic"
        android:textColor="?attr/colorAccent" />
    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/actionWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/basics">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Step 1: Where will you be traveling?"
                        android:id="@+id/stepOne"
                        android:paddingTop="15dp"
                        android:textSize="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:layout_below="@+id/stepOne"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/stepOne"
                        android:layout_alignEnd="@+id/stepOne"
                        android:id="@+id/locationEditText"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:hint="Location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/locationEditText"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/locationEditText"
                        android:layout_alignEnd="@+id/locationEditText"
                        android:text="Step 2: What dates are you looking for?"
                        android:id="@+id/stepTwo"
                        android:textSize="20dp"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/startDateEditText"
                        android:hint="Pick Start Date"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/endDateEditText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_below="@+id/stepTwo"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/toText"
                        android:paddingTop="10dp"
                        android:textSize="20dp"
                        android:text="to" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toText"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/locationEditText"
                        android:layout_alignEnd="@+id/locationEditText"
                        android:text="Step 3: What times do you need the spot?"
                        android:id="@+id/stepThree"
                        android:textSize="20dp"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/startTimeText"
                        android:hint="Pick Start Time"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/endTimeText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_below="@+id/stepThree"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/toText2"
                        android:paddingTop="10dp"
                        android:textSize="20dp"
                        android:text="to" />
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="vertical"
                    android:id="@+id/filters"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Step 4: Select parking space features."
                        android:id="@+id/stepFour"
                        android:paddingTop="15dp"
                        android:textSize="20dp"/>
                    <LinearLayout
                        android:id="@+id/stepFourLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stepFour">
                        <CheckBox
                            android:text="Compact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/compactBox" />
                        <CheckBox
                            android:text="Covered Parking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/coverBox" />
                        <CheckBox
                            android:text="Handicapped"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/handicappedBox" />
                    </LinearLayout>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search!"
        android:id="@+id/searchButton"
        android:layout_below="@id/tabHost"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

</RelativeLayout>