...
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:id="@+id/emailTextView"
                android:text="Email"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
...
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View History"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/viewHostHistoryButton"
                 />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/editUserDetailsToggleButton"
...
