<?xml version="1.0" encoding="utf-8"?>
<menu
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MainActivity">
<item
    android:id="@+id/about"
    android:title="@string/about" />
<item
    android:id="@+id/signOut"
    android:title="Sign-out"/>
    <item
        android:id="@+id/newPosting"
        android:title="New Post"/>
<item
    android:id="@+id/action_user"
    android:orderInCategory="200"
    android:title="User"
    android:icon="@drawable/face"
    app:showAsAction="ifRoom"></item>


</menu>